compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_put_stmt-3.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: put

---
database:
nodes:
HirId(Idx::<HirNode>(0)) (Span { file: None, range: 0..3 }): Unit(Unit { id: UnitId(HirId(Idx::<HirNode>(0))), stmts: [], symbol_table: SymbolTable { defs: {}, def_spans: {}, use_spans: {}, next_def: 0 } })

root stmts:
[]
symtab:

