compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_put_stmt-5.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "put 1 : 1 :  : "

---
database:
nodes:
HirId(Idx::<HirNode>(0)) (Span { file: None, range: 4..5 }): Expr(Literal(Integer(1)))
HirId(Idx::<HirNode>(1)) (Span { file: None, range: 8..9 }): Expr(Literal(Integer(1)))
HirId(Idx::<HirNode>(2)) (Span { file: None, range: 0..14 }): Stmt(Put(Put { stream_num: None, items: [Item(PutItem { expr: ExprId(HirId(Idx::<HirNode>(0))), opts: WithWidth { width: ExprId(HirId(Idx::<HirNode>(1))) } })], append_newline: true }))

root stmts:
[StmtId(HirId(Idx::<HirNode>(2)))]
symtab:

