compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_put_stmt-6.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "put 1 :  :  : "

---
database:
stmt:
Idx::<Stmt>(0) (Span { file: None, range: 0..13 }): Put(Put { stream_num: None, items: [Item(PutItem { expr: Idx::<Expr>(0), opts: None })], append_newline: true })

expr:
Idx::<Expr>(0) (Span { file: None, range: 4..5 }): Literal(Integer(1))

ty:

root stmts:
[Idx::<Stmt>(0)]
symtab:

