compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_real_literal-11.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "a := 1.0e600"

---
database:
stmt:
Idx::<Stmt>(0) (0..12): Assign(Assign { lhs: Idx::<Expr>(0), op: None, rhs: Idx::<Expr>(1) })

expr:
Idx::<Expr>(0) (0..2): Name(Name(UseId(DefId(0), 0)))
Idx::<Expr>(1) (5..12): Literal(Real(0.0))

ty:

root stmts:
[Idx::<Stmt>(0)]
symtab:
DefId(0): (0..1, Symbol { name: "a", kind: Undeclared, is_pervasive: false, def_id: DefId(0), next_use: 1 })
UseId(DefId(0), 0): 0..1
error at 5..12: real literal is too large

